compiler/tests/success/otbn/bn_add.jazz
export
fn bn_add(reg u256 arg0 arg1) -> reg u256 {
    reg u256 x;
    x = arg0 +256u arg1;
    return x;
}
